update project to remove sensitive sample data.

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 					'xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/" ' +
                     '<soapenv:Body>' +
                         '<BANKCARD_AUTHONLY xmlns="wsVTExtensions"> ' +
-							'<M_ID>257143876349</M_ID> ' +
-							'<M_KEY>O4N1U5P5Y3P3</M_KEY> ' +
-							'<C_NAME>Thomas Hagan</C_NAME> ' +
+							'<M_ID>2**********9</M_ID> ' +
+							'<M_KEY>O**********3</M_KEY> ' +
+							'<C_NAME>Anakin Skywalker</C_NAME> ' +
 							'<C_ADDRESS>123 Main St</C_ADDRESS> ' +
 							'<C_CITY>Savannah</C_CITY> ' +
 							'<C_STATE>GA</C_STATE> ' +
 							'<C_ZIP>31405</C_ZIP> ' +
 							'<C_COUNTRY>US</C_COUNTRY> ' +
-							'<C_EMAIL>thlinux@gmail.com</C_EMAIL> ' +
-							'<C_CARDNUMBER>5454545454545454</C_CARDNUMBER> ' +
-							'<C_EXP>1221</C_EXP> ' +
-							'<C_CVV>998</C_CVV> ' +
+							'<C_EMAIL>me@email.com</C_EMAIL> ' +
+							'<C_CARDNUMBER>5454**********54</C_CARDNUMBER> ' +
+							'<C_EXP>****</C_EXP> ' +
+							'<C_CVV>***</C_CVV> ' +
 							'<T_CUSTOMER_NUMBER>0123</T_CUSTOMER_NUMBER> ' +
 							'<T_AMT>1.99</T_AMT> ' +
 							'<T_SHIPPING>0.00</T_SHIPPING> ' +
